# api/api-spec.yml
@@ -36,7 +36,7 @@ paths:
         '409':
           description: Email already exists 
 
-  /user/comment:
+  /user/comment/new:
     post:
       summary: Post a comment
       parameters:
@@ -58,6 +58,30 @@ paths:
       responses:
         '201':
           description: Comment posted successfully
+        '401':
+          description: Unauthorized
+        '400':
+          description: Bad request
+
+  /admin/comment/delete:
+    post:
+      summary: Delete a comment
+      parameters:
+        - name: id
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: threadid
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Comment deleted successfully
+        '404':
+          description: Comment not found
         '401':
           description: Unauthorized
         '400':
