# api/v1/routing/handlers/admin.go
@@ -3,6 +3,7 @@ package handlers
 import (
 	"fmt"
 	"gotalk/api/state"
+	"gotalk/api/v1/response"
 	"gotalk/api/v1/errors"
 	"gotalk/internal/encryption"
 	"gotalk/internal/json"
@@ -14,37 +15,37 @@ import (
 func IsAdmin(w http.ResponseWriter, r *http.Request){
 	user := r.PathValue("user")
 
-	w.Write(json.Json{
+	response.Success(w, json.Json{
 		Status: 200,
 		Message: fmt.Sprintf("%s you are an admin!", user),
-	}.ToBytes())
+	})
 }
 
 func UndoSudo(w http.ResponseWriter, r *http.Request) {
-	id := r.PathValue("id")
-
-	if strings.TrimSpace(id) == "" {
-		http.Error(w, errors.NOT_FOUND("id").ToString(), errors.STATUS_NOT_FOUND)
+	err := r.ParseForm()
+	if err != nil {
+		response.Error(w, errors.FAILED("parsing form"))
 		return
 	}
 
+	id := r.FormValue("id")
 	succ := state.Instance.Users.Sudo(encryption.Hash(id), true)
 
 	if !succ {
-		http.Error(w, errors.FAILED("revoke admin privileges").ToString(), errors.STATUS_FAIL)
+		response.Error(w, errors.FAILED("revoking admin privileges"))
 		return
 	}
 
-	w.Write(json.Json{
+	response.Success(w, json.Json{
 		Status: 200,
-		Message: fmt.Sprintf("Admin privileges revoked"),
-	}.ToBytes())
+		Message: "Admin privileges revoked",
+	})
 }
 
 func Sudo(w http.ResponseWriter, r *http.Request) {
 	err := r.ParseForm()
 	if err != nil {
-		http.Error(w, errors.PARSING_FORM_FAILED.ToString(), errors.STATUS_BAD_REQUEST)
+		response.Error(w, errors.FAILED("parsing form"))
 		return
 	}
 
@@ -53,52 +54,77 @@ func Sudo(w http.ResponseWriter, r *http.Request) {
 	succ := state.Instance.Users.Sudo(encryption.Hash(id), false)
 
 	if !succ {
-		http.Error(w, errors.FAILED("grand admin privileges").ToString(), errors.STATUS_FAIL)
+		response.Error(w, errors.FAILED("granding admin privileges"))
 		return
 	}
 
-	w.Write(json.Json{
+	response.Success(w, json.Json{
 		Status: 200,
-		Message: fmt.Sprintf("Admin privileges granted"),
-	}.ToBytes())
+		Message: "Admin privileges granted",
+	})
 }
 
 func DeleteThread(w http.ResponseWriter, r *http.Request) {
 	err := r.ParseForm()
 	if err != nil {
-		http.Error(w, errors.PARSING_FORM_FAILED.ToString(), errors.STATUS_BAD_REQUEST)
+		response.Error(w, errors.FAILED("parsing form"))
 		return
 	}
 
 	threadid := r.FormValue("threadid")
 
 	if strings.TrimSpace(threadid) == "" {
-		http.Error(w, errors.NOT_FOUND("Thread").ToString(), errors.STATUS_NOT_FOUND)
+		response.Error(w, errors.NOT_FOUND("Thread"))
 		return
 	}
 
 	succ := state.Instance.Threads.RemoveThread(threadid)
 	
 	if !succ {
-		http.Error(w, errors.FAILED("delete thread (threadid doesn't exist)").ToString(), errors.STATUS_FAIL)
+		response.Error(w, errors.FAILED("deleting thread"))
 		return
 	}
 	
-	w.Write(json.Json{
+	response.Success(w, json.Json{
 		Status: 204,
 		Message: "Thread deleted successfully",
-	}.ToBytes())
+	})
 }
 
 
 func NewThread(w http.ResponseWriter, r *http.Request) {
 	id := state.Instance.Threads.PushThread(&threads.Thread{})
 
-	w.Write(json.Json {
+	response.Success(w, json.Json {
 		Status: 201,
 		Message: "Thread created successfully",
 		Data: json.NestedJson{
 			Key: id,
 		},
-	}.ToBytes())
+	})
+}
+
+func DeleteComment(w http.ResponseWriter, r *http.Request) {
+	err := r.ParseForm()
+	if err != nil {
+		response.Error(w, errors.FAILED("parsing form"))
+		return
+	}
+
+	id := r.FormValue("id")
+	threadid := r.FormValue("threadid")
+
+	thread := state.Instance.Threads.Get(threadid)
+	index := thread.SearchCommentID(id)
+	succ := thread.RemoveComment(index)
+
+	if !succ {
+		response.Error(w, errors.NOT_FOUND("Comment"))
+		return
+	}
+
+	response.Success(w, json.Json {
+		Status: 204,
+		Message: "Comment removed successfully",
+	})
 }
